scss - fix collections nav/footer overlap, ref #27

--- a/libraries/libraries/static/scss/components/collections/_collections-nav.scss
+++ b/libraries/libraries/static/scss/components/collections/_collections-nav.scss
@@ -10,7 +10,6 @@
     background: $white;
     margin: 0;
     max-height: calc(100vh - 200px);
-    overflow: scroll;
     position: fixed;
     width: 200px;
     z-index: 99;
