--- a/libraries/libraries/static/scss/components/footer/_footer.scss
+++ b/libraries/libraries/static/scss/components/footer/_footer.scss
@@ -5,6 +5,8 @@
 .footer {
   background: $grey;
   padding: 15px 0;
+  z-index: 100;
+  position: relative;
 }
 
   .footer__sections {
